# basic-unturned-parser

./: Cargo.toml  README.md
crates/torture-cli/: Cargo.toml
crates/torture-cli/src/: main.rs
crates/torture-parser/: Cargo.toml
crates/torture-parser/src/parser/: assets.rs  language.rs
crates/torture-parser/src/parser/assets/: bag.rs  barrel.rs  barricade.rs  caliber.rs  clothing.rs  consumable.rs  gear.rs  glasses.rs  grip.rs  gun.rs  magazine.rs  mask.rs  optic.rs  parachute.rs  sentry.rs  shirt.rs  sight.rs  storage.rs  structure.rs  tactical.rs  weapon.rs
src/: cli.rs  lib.rs  main.rs  parser.rs
src/parser/: assets.rs  language.rs
src/parser/assets/: bag.rs  barrel.rs  caliber.rs  gun.rs  weapon.rs
